feat(web-components): :sparkles: add basic line chart

--- a/packages/sszvis-wc/src/index.css
+++ b/packages/sszvis-wc/src/index.css
@@ -23,11 +23,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 2rem;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
 }
 
 @media (prefers-color-scheme: light) {
